--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 项目介绍
 西厢计划 MacOSX 移植版: http://liruqi.wordpress.com/2011/10/29/west-chamber-macosx-port/
 
-Donate for this projects: my paypal account is liruqi@gmail.com
+Donate for this project: my paypal account is liruqi@gmail.com
